# cc2-proyect

./: .gitignore  CMakeLists.txt  Date.cpp  Date.hpp  Integer.cpp  Integer.hpp  NaturalNumber.cpp  NaturalNumber.hpp  README.md  _date.hpp  build.gradle  can_be_rendered.hpp  can_convert.hpp  can_decide.hpp  can_move.hpp  date.cpp  date.hpp  entity.cpp  entity.hpp  graphic_renderer.hpp  guidelines.md  handler.hpp  holacomm.cpp  index.cpp  main.cpp  mobile.hpp  natural_number.cpp  natural_number.hpp  object.hpp  settings.gradle  space.cpp  space.hpp  system_handler.cpp  system_handler.hpp  time.cpp  time.hpp  zombie.cpp  zombie.hpp
doc/: requirements.md
include/: animation.hpp  background.hpp  button.hpp  button_clicked.hpp  button_handler.hpp  button_hovered.hpp  button_neutral.hpp  button_observer.hpp  button_state.hpp  buttonclicked.hpp  buttonstate.hpp  can_attack.hpp  command.hpp  command_start_simulation.hpp  commandstartsimulation.hpp  entity.hpp  game_image.hpp  game_object.hpp  graphic_handler.hpp  human.hpp  input.hpp  input_handler.hpp  location.hpp  mouse_input.hpp  object.hpp  observable.hpp  observer.hpp  renderable.hpp  scenario.hpp  scenario_object.hpp  simulation_object.hpp  space.hpp  state_handler.hpp  system_handler.hpp  time.hpp  utils.hpp  zombie.hpp
src/: animation.cpp  background.cpp  button.cpp  button_clicked.cpp  button_handler.cpp  button_hovered.cpp  button_neutral.cpp  button_observer.cpp  button_state.cpp  buttonclicked.cpp  command.cpp  command_start_simulation.cpp  commandstartsimulation.cpp  entity.cpp  game_image.cpp  game_object.cpp  graphic_handler.cpp  human.cpp  input.cpp  input_handler.cpp  location.cpp  main.cpp  mouse_input.cpp  natural_number.cpp  observable.cpp  observer.cpp  renderable.cpp  scenario.cpp  space.cpp  state_handler.cpp  system_handler.cpp  time.cpp  utils.cpp  zombie.cpp
src/main/cpp/: button.cpp  entity.cpp  graphic_handler.cpp  human.cpp  main.cpp  space.cpp  system_handler.cpp  time.cpp  u_i_object.cpp  zombie.cpp
src/main/headers/: graphic_handler.hpp  space.hpp  state_handler.hpp  system_handler.hpp  u_i_object.hpp
src/test/cpp/: test.cpp  testenum.cpp
test/: test.cpp  utilities.hpp
test/cpp/: test.cpp  testenum
